# psftw-blog

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  about.markdown  astro.config.ts  cleanup  conf.py  css  index.html  local  localp  master.rst  package-lock.json  package.json  psftw-blog.cabal  push  push.py  requirements.txt  run  site.hs  stack.yaml  tinker
2013/05/08/: exploring_jython.rst
2013/05/25/: simplifying_the_workflow.rst
2013/06/22/: paragon_100.rst
2014/07/14/: paragon_300.rst
2015/01/31/: docker_aware_dns_and_transparent_apt_caching.rst
2015/07/16/: paragon_500.rst
_copy/: psftw.asc
_static/: vm-centos64
_themes/myboilerplate/: aggregated.html  archive.html  categories.html  layout.html  recent.html  theme.conf
_themes/myboilerplate/static/: normalize.css
_themes/simple5/: about.html  layout.html  side-archive.html  theme.conf
css/: default.css
nginx/: Dockerfile  nginx.conf
pages/: hi2u.rst
posts/: 2013-05-08-exploring-jython.markdown  2013-05-25-simplifying-the-workflow.markdown  2013-06-22-paragon-100.markdown  2014-07-14-paragon-300.markdown  2015-01-31-docker-aware-dns-and-transparent-apt-caching.markdown  2015-07-16-paragon-500.markdown
src/: content.config.ts
src/components/: DarkModeToggle.astro
src/layouts/: Layout.astro  LayoutMd.astro
src/pages/: _kitchensink.mdx  about.md  about.mdx  archive.astro  archive.mdx  index.mdx  kitchensink.md  kitchensink.mdx
src/stores/: persistentDarkMode.ts
src/styles/: global.css
templates/: archive.html  default.html  post-list.html  post.html
(+14 files in other folders)
