cabal-version:      3.4
name:               psftw-blog
version:            0.2.0.0
build-type:         Simple
common warnings
    ghc-options: -Wall

executable psftw-blog
    import:           warnings
    main-is:          site.hs
    build-depends:    base >= 4.17
                    , hakyll >= 4.12
    hs-source-dirs:   .
    default-language: GHC2021
